// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should mark the currently active child route as selected tab 1`] = `
<div
  class="tabs nested"
>
  <div
    class="tabsContainerWrapper"
  >
    <ul
      class="tabsContainer"
    >
      <li
        class="tab nested"
      >
        <button
          title="Tab Titel 1"
          type="button"
        >
          Tab Titel 1
        </button>
      </li>
      <li
        class="tab nested selected"
      >
        <button
          disabled=""
          title="Tab Titel 2"
          type="button"
        >
          Tab Titel 2
        </button>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Should mark the currently active child route as selected tab 2`] = `
<h1>
  Child
</h1>
`;

exports[`Should render the child components after the tabs 1`] = `
<div
  class="tabs root"
>
  <div
    class="tabsContainerWrapper"
  >
    <ul
      class="tabsContainer"
    >
      <li
        class="tab root"
      >
        <button
          title="Tab Titel 1"
          type="button"
        >
          Tab Titel 1
        </button>
      </li>
      <li
        class="tab root"
      >
        <button
          title="Tab Titel 2"
          type="button"
        >
          Tab Titel 2
        </button>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Should render the child components after the tabs 2`] = `
<h1>
  Child
</h1>
`;
